Desafio Encriptador Alura por Guillermo Topp
Desafio Encriptador Alura 
Version 1.2
Desarrollador: Guillermo Topp

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
         </section>
         <section class="secundaria">
             <textarea class="mensaje" cols="20" rows="10    "> </textarea>
+            <div class="mensajeInicio">
+                <h3> Ningun mensaje fue <BR> encontrado</h3>
+                <h6> Ingresa el texto que deseas encriptar<BR> o desencriptar</h6>
+
+                </div>
             <div>
                 <button class="copiar"> Copiar </button>
             </div>
