--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <header> 
-        <img class="logo" src="imagenes/Guillermotopp logo.png" alt="logo de alura">
+        <img class="logo" src="/imagenes/Guillermotopp logo.png" alt="logo de alura">
     </header>
     <main>
         <section class="principal">
@@ -22,19 +23,19 @@
                 <h6 class="informacion"> solo letras minusculas y sin acento</h6>
             </div>
             <div class="btn">
-                <button class="btnEncriptar" onclick="btnEncriptar();"> Encriptar </button>
+                <button class="btnEncriptar" onclick="btnEncriptar()"> Encriptar </button>
                 <button class="btnDesencriptar" onclick="btnDesencriptar()"> Desencriptar </button>
             </div>
         </section>
         <section class="secundaria">
             <textarea class="mensaje" cols="20" rows="10    "> </textarea>
             <div class="mensajeInicio">
-                <h3> Ningun mensaje fue <BR> encontrado</h3>
-                <h6> Ingresa el texto que deseas encriptar<BR> o desencriptar</h6>
+                <h3> Ningun mensaje fue encontrado</h3>
+                <h6> Ingresa el texto que deseas encriptar o desencriptar</h6>
 
                 </div>
             <div>
-                <button class="copiar"> Copiar </button>
+                <button class="copiar" onclick="copiar()"> Copiar </button>
             </div>
         </section>
     </main>
