--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header> 
-        <img class="logo" src="/imagenes/Guillermotopp logo.png" alt="logo de alura">
+        <img class="logo" src="imagenes/Guillermotopp logo.png" alt="logo de alura">
     </header>
     <main>
         <section class="principal">
