Mejore la compatibilidad con las pantallas
Los requisitos de figma de los mensajes y el boton de copiar que aparecia en algunos modelos y en otros no se arreglaron.
todavia existen fallos en el tamaño de celular largo. Pero el proyecto es funcional en todos sus requisitos,

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,8 +11,9 @@
     <title>Encriptador</title>
 </head>
 <body>
-    <header> 
-        <img class="logo" src="imagenes/Guillermotopp logo.png" alt="logo de alura">
+    <header>
+        <img class="logo" src="/imagenes/Guillermotopp logo.png" alt="logo de alura">
+       <!--<button class="mostrarTamaño" onclick="mostrarTamaño()"> Mostrar Tamaño </button>*-->
     </header>
     <main>
         <section class="principal">
